--- a/scss/all_blocks/_variables.scss
+++ b/scss/all_blocks/_variables.scss
@@ -1,6 +1,6 @@
-$color1: #FFFFFF;
-$color2: #FFFFFF;
-$color3: #FFFFFF;
-$color4: #FFFFFF;
-$color5: #FFFFFF;
-$color6: #FFFFFF;
+$yellow: #FCB72B;
+$darknavy: #495567;
+$dimgrey: #939CAA;
+$lightgrey: #E5ECF4;
+$snow: #F2F5F9;
+$lightyellow: #FFF4DF;
