--- a/scss/all_blocks/_button.scss
+++ b/scss/all_blocks/_button.scss
@@ -3,6 +3,7 @@
     max-width: 195px;
     min-height: 53px;
     min-width: 180px;
+    text-transform: capitalize;
     background-color: $yellow;
     border: none;
 }
