--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -12,6 +12,7 @@ body{
     flex-direction: column;
     margin: 0;
     padding: 0;
+    padding-top: 96px;
     font-family: 'Space Mono',  'Lexend Deca', 'sans-serif','monospace' ;
 }
 
@@ -79,3 +80,13 @@ ul, ol{
     margin: 0;
     padding: 0;
 }
+
+.visually-hidden {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+  }
