--- a/css/main.css
+++ b/css/main.css
@@ -393,39 +393,35 @@ main {
 }
 
 h1 {
-  font-family: Space Mono;
+  font-family: 'Space Mono';
   font-weight: bold;
   font-size: 56px;
   line-height: 56px;
   letter-spacing: -2.5px;
-  color: #495567;
 }
 
 h2 {
-  font-family: Space Mono;
+  font-family: 'Space Mono';
   font-weight: bold;
   font-size: 48px;
   line-height: 48px;
   letter-spacing: -2.14286px;
-  color: #495567;
 }
 
 h3 {
-  font-family: Space Mono;
+  font-family: 'Space Mono';
   font-weight: bold;
   font-size: 40px;
   line-height: 48px;
   letter-spacing: -1.78571px;
-  color: #495567;
 }
 
 h4 {
-  font-family: Space Mono;
+  font-family: 'Space Mono';
   font-weight: bold;
   font-size: 24px;
   line-height: 28px;
   letter-spacing: -1.07143px;
-  color: #495567;
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -434,12 +430,10 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .text {
-  font-family: Lexend Deca;
-  font-style: normal;
+  font-family: 'Lexend Deca';
   font-weight: normal;
   font-size: 15px;
   line-height: 25px;
-  color: #495567;
 }
 
 a {
@@ -471,13 +465,14 @@ ul, ol {
   min-width: 180px;
   text-transform: capitalize;
   background-color: #FCB72B;
+  color: #FFFFFF;
   border: none;
 }
 
 .button:hover {
   -webkit-box-shadow: inset 0 0 0 3px #FCB72B;
           box-shadow: inset 0 0 0 3px #FCB72B;
-  background-color: #FFFFFF;
+  background-color: transparent;
   color: #FCB72B;
 }
 
@@ -612,7 +607,7 @@ ul, ol {
   }
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 720px) {
   .header__container {
     padding: 22px 32px;
   }
@@ -624,7 +619,6 @@ ul, ol {
         -ms-flex-pack: center;
             justify-content: center;
     position: relative;
-    border: 2px solid black;
   }
   .header__left-side {
     display: -webkit-box;
@@ -639,13 +633,15 @@ ul, ol {
             justify-content: space-between;
     margin: 0;
   }
-  .header__button::before {
-    content: "";
+  .header__button {
     position: absolute;
     display: inline-block;
     border: none;
     width: 19.69;
     height: 16px;
+    left: 0;
+    top: 0;
+    background-color: #FFFFFF;
   }
   .header__button-image {
     vertical-align: middle;
@@ -665,6 +661,186 @@ ul, ol {
   }
   .header .button {
     display: none;
+  }
+}
+
+.hero__container {
+  padding-top: 153px;
+  padding-bottom: 154px;
+  background-image: url(./../images/hero-bg-img@1x.jpg);
+  background-repeat: no-repeat;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  color: #FFFFFF;
+}
+
+.hero__container::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #2F3B59;
+  opacity: 0.75;
+  z-index: -1;
+}
+
+.hero__heading {
+  max-width: 500px;
+  width: 100%;
+  margin-bottom: 40px;
+}
+
+.hero__inner {
+  max-width: 405px;
+  width: 100%;
+  margin-left: 105px;
+}
+
+.hero__text {
+  margin-bottom: 40px;
+  position: relative;
+}
+
+.hero__text::after {
+  content: "";
+  position: absolute;
+  background-image: url(./../images/hero-line.svg);
+  background-repeat: no-repeat;
+  width: 415px;
+  height: 15px;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translate(-472.5px, -50%);
+          transform: translate(-472.5px, -50%);
+}
+
+.hero__text::before {
+  content: "";
+  position: absolute;
+  background-image: url(./../images/hero-arrow.svg);
+  background-repeat: no-repeat;
+  width: 450px;
+  height: 150px;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translate(445px, -8px);
+          transform: translate(445px, -8px);
+}
+
+@media only screen and (max-width: 768px) {
+  .hero__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-right: 98px;
+    padding-left: 97px;
+    padding-top: 137px;
+    padding-bottom: 217px;
+    text-align: center;
+    background-image: url(./../images/hero-bg-tablet@1x.jpg);
+  }
+  .hero__heading {
+    margin-bottom: 24px;
+  }
+  .hero__inner {
+    max-width: 405px;
+    width: 100%;
+    margin-left: 0;
+  }
+  .hero__text {
+    max-width: 557px;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 32px;
+    font-family: 'Lexend Deca';
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 25px;
+    color: #FFFFFF;
+  }
+  .hero__text::after {
+    background-image: none;
+  }
+  .hero__text::before {
+    bottom: 0;
+    right: 0;
+    -webkit-transform: translate(-300px, 160px);
+            transform: translate(-300px, 160px);
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .hero__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-right: 32px;
+    padding-left: 32px;
+    padding-top: 115px;
+    padding-bottom: 179px;
+    padding: 115px 32px 179px 32px;
+    text-align: center;
+    background-image: url(./../images/hero-bg-tablet@1x.jpg);
+  }
+  .hero__heading {
+    font-family: 'Space Mono';
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 40px;
+    text-align: center;
+    letter-spacing: -1.78571px;
+    margin-bottom: 24px;
+  }
+  .hero__inner {
+    max-width: 405px;
+    width: 100%;
+    margin-left: 0;
+  }
+  .hero__text {
+    max-width: 557px;
+    width: 100%;
+    font-family: Lexend Deca;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 25px;
+    text-align: center;
+    color: #FFFFFF;
+  }
+  .hero__text::after {
+    background-image: none;
+  }
+  .hero__text::before {
+    bottom: 0;
+    right: 0;
+    -webkit-transform: translate(-345px, 140px);
+            transform: translate(-345px, 140px);
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .hero__container {
+    background-image: url(./../../images/hero-bg-mobile@1x.svg);
+    background-repeat: no-repeat;
   }
 }
 
