--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -21,39 +21,35 @@ main{
 }
 
 h1{
-    font-family: Space Mono;
+    font-family: 'Space Mono';
     font-weight: bold;
     font-size: 56px;
     line-height: 56px;
     letter-spacing: -2.5px;
-    color: #495567;
 }
 
 h2{
-    font-family: Space Mono;
+    font-family: 'Space Mono';
     font-weight: bold;
     font-size: 48px;
     line-height: 48px;
     letter-spacing: -2.14286px;
-    color: #495567;
 }
 
 h3{
-    font-family: Space Mono;
+    font-family: 'Space Mono';
     font-weight: bold;
     font-size: 40px;
     line-height: 48px;
     letter-spacing: -1.78571px;
-    color: #495567; 
 }
 
 h4{
-    font-family: Space Mono;
+    font-family: 'Space Mono';
     font-weight: bold;
     font-size: 24px;
     line-height: 28px;
     letter-spacing: -1.07143px;
-    color: #495567;
 }
 
 h1, h2, h3, h4, h5, h6, p{
@@ -62,12 +58,10 @@ h1, h2, h3, h4, h5, h6, p{
 }
 
 .text{
-    font-family: Lexend Deca;
-    font-style: normal;
+    font-family: 'Lexend Deca';
     font-weight: normal;
     font-size: 15px;
     line-height: 25px;
-    color: #495567;
 }
 
 a{
