--- a/scss/all_blocks/_button.scss
+++ b/scss/all_blocks/_button.scss
@@ -5,11 +5,12 @@
     min-width: 180px;
     text-transform: capitalize;
     background-color: $yellow;
+    color: $white;
     border: none;
 }
 
 .button:hover{
     box-shadow: inset 0 0 0 3px $yellow;
-    background-color: #FFFFFF;
+    background-color: transparent;
     color: $yellow
 }
