--- a/scss/all_blocks/_header.scss
+++ b/scss/all_blocks/_header.scss
@@ -119,7 +119,7 @@
     
 }
 
-@media only screen and (max-width:375px) {
+@media only screen and (max-width:720px) {
     .header {
 
 		&__container {
@@ -130,7 +130,6 @@
             align-items: center;
             justify-content: center;
             position: relative;
-            border: 2px solid black;
 		}
 
 		&__left-side {
@@ -140,17 +139,18 @@
             margin: 0;
 		}
 
-        &__button::before {
-            content: "";
+        &__button {
             position: absolute;
             display: inline-block;
             border: none;
             width: 19.69;
             height: 16px;
+            left: 0;
+            top: 0;
+            background-color: #FFFFFF;
         }
     
         &__button-image {
-            
             vertical-align: middle;
             width: 19.69;
             height: 16px;
