--- a/scss/all_blocks/_hero.scss
+++ b/scss/all_blocks/_hero.scss
@@ -1,4 +1,5 @@
 .hero {
+  margin-bottom: 122px;
 
   &__container {
     padding-top: 153px;
@@ -174,7 +175,7 @@
     }
 }
 
-  
+
 }
 
 @media only screen and (max-width:375px) {
@@ -182,7 +183,7 @@
     &__container{
       background-image: url(./../../images/hero-bg-mobile@1x.svg);
       background-repeat: no-repeat;
-      
+
     }
   }
 }
