--- a/scss/all_blocks/_all-blocks.scss
+++ b/scss/all_blocks/_all-blocks.scss
@@ -3,6 +3,8 @@
 @import "container";
 @import "header";
 @import "hero";
-@import "footer";
 @import "progress";
 @import "rounds";
+@import "advantages";
+@import "network";
+@import "footer";
