--- a/scss/all_blocks/_header.scss
+++ b/scss/all_blocks/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    // position: fixed;
+    position: fixed;
     width: 100%;
     top: 0;
     left: 0;
@@ -32,8 +32,6 @@
         height: 16px;
 	}
 
-
-
     &__logo-link {
         margin-right: 58.18px;
     }
@@ -45,18 +43,12 @@
         
     }
     
-    &__nav {
-    }
-    
     &__list {
         display: flex;
         flex-wrap: wrap;
         align-items: center;
     }
     
-    &__item {
-        
-    }
     &__item + &__item {
         margin-left: 32px;
     }
@@ -77,53 +69,19 @@
 
 @media only screen and (max-width:1162px) {
     .header{
-
         &__container{
             padding-right: 40px;
             padding-left: 39px;
         }
-
-        
     }
-    
-}
-
-@media only screen and (max-width:719px) {
-    .header{
-
-        &__container{
-            
-        }
-
-        &__wrapper{
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            
-        }
-
-        &__left-side{
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-
-        &__logo-link{
-            margin: 0;
-            margin-bottom: 20px;
-        }
-
-        
-    }
-    
 }
 
 @media only screen and (max-width:720px) {
     .header {
 
 		&__container {
-            padding: 22px 32px;
+            padding-top: 24px;
+            padding-bottom: 24px;
 		}
 
 		&__wrapper {
@@ -170,54 +128,21 @@
             display: none;
 		}
 
-		&__list {
-		}
-
-		&__item {
-		}
-
-		&__nav-link {
-		}
-
         .button{
             display: none;
         }
 }
-
-
     
 }
 
+@media only screen and (max-width:375px) {
+    .header {
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media only screen and (max-width:1350px) {
-    .header{
-
-        &__container{
-            
-        }
-
-        
-    }
+		&__container {
+            padding-top: 24px;
+            padding-bottom: 24px;
+		}
+}
     
 }
+
