--- a/scss/all_blocks/_hero.scss
+++ b/scss/all_blocks/_hero.scss
@@ -185,26 +185,6 @@
   }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
 only screen and (   min--moz-device-pixel-ratio: 2),
@@ -213,6 +193,11 @@ only screen and (        min-device-pixel-ratio: 2),
 only screen and (                min-resolution: 192dpi),
 only screen and (                min-resolution: 2dppx) { 
   
-  /* Retina-specific stuff here */
+  .hero{
+    &__container {;
+      background-image: url(./../images/hero-bg-img@2x.jpg);
+      
+    }
+  }
 }
 
